codejudge-compiler/src/stage/9/err.txt
test.cpp:3:5: error: expected unqualified-id before ‘,’ token
 int ,main()
     ^
test.cpp:4:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
